# backend-practice

./: CMakeLists.txt  deployment.yaml  hpa.yaml  service.yaml
.github/workflows/: ci.yml
test/: CMakeLists.txt
zadanie2/: Dockerfile  main.cpp
zadanie3/: Dockerfile  main.cc
zadanie4/: CMakeLists.txt  Dockerfile  main.cc
zadanie5_2/: CMakeLists.txt  test_isprime.cpp
